[gd_scene load_steps=17 format=3 uid="uid://dsvs8f4whmoj8"]

[ext_resource type="Script" path="res://Nodes/Player/Behaviour/player.gd" id="1_6vu3n"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/player_behaviour_manager.gd" id="2_vkora"]
[ext_resource type="TileSet" uid="uid://cd8wd3cs4v06b" path="res://Nodes/Tilemaps/demo_set.tres" id="3_2di1x"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/Movement/player_movement.gd" id="3_a40j8"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/Movement/Gravity/player_gravity.gd" id="4_qeg1i"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/Movement/Walk/player_walk.gd" id="4_qfdvb"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/player_renderer.gd" id="4_rb64f"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/Movement/Walk/player_walk_input.gd" id="5_ux7td"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/Movement/Jump/player_jump.gd" id="7_7d58r"]
[ext_resource type="Script" path="res://Nodes/Player/Behaviour/Movement/Jump/player_jump_input.gd" id="8_raxtn"]
[ext_resource type="Texture2D" uid="uid://ceetsjneupxs1" path="res://Sources/Node Sources/Player/block.png" id="9_3tai0"]
[ext_resource type="Texture2D" uid="uid://b4opvlkkr8mfx" path="res://Sources/Node Sources/Doors/door_1.png" id="11_2helu"]
[ext_resource type="Script" path="res://Nodes/LevelNodes/Door/Door Behaviour/door.gd" id="12_rejb0"]
[ext_resource type="Script" path="res://Nodes/LevelNodes/Door/Door Behaviour/door_area_behaviout.gd" id="14_pr5bk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igsnn"]
size = Vector2(32, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oknrl"]
size = Vector2(48, 80)

[node name="entry" type="Node2D"]

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(104, -280)
script = ExtResource("1_6vu3n")
metadata/_edit_group_ = true

[node name="behaviour" type="Node2D" parent="player"]
script = ExtResource("2_vkora")

[node name="player_movement" type="Node2D" parent="player/behaviour"]
script = ExtResource("3_a40j8")

[node name="player_gravity" type="Node2D" parent="player/behaviour/player_movement"]
script = ExtResource("4_qeg1i")

[node name="player_walk" type="Node2D" parent="player/behaviour/player_movement"]
script = ExtResource("4_qfdvb")

[node name="player_walk_input" type="Node2D" parent="player/behaviour/player_movement/player_walk"]
script = ExtResource("5_ux7td")

[node name="player_jump" type="Node2D" parent="player/behaviour/player_movement"]
script = ExtResource("7_7d58r")

[node name="player_jump_input" type="Node2D" parent="player/behaviour/player_movement/player_jump"]
script = ExtResource("8_raxtn")

[node name="player_sprite" type="Sprite2D" parent="player"]
texture = ExtResource("9_3tai0")
script = ExtResource("4_rb64f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_igsnn")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="player"]
remote_path = NodePath("../../Camera2D")

[node name="map" type="Node2D" parent="."]

[node name="tile_map" type="TileMap" parent="map"]
tile_set = ExtResource("3_2di1x")
format = 2
layer_0/tile_data = PackedInt32Array(655360, 720897, 2, 589824, 720897, 2, 524288, 720897, 2, 458752, 720897, 2, 393216, 720897, 2, 327680, 720897, 2, 262144, 720897, 2, 196608, 720897, 2, 131072, 720897, 2, 65536, 720897, 2, 0, 720897, 2, 720895, 524289, 1, 655359, 524289, 1, 589823, 524289, 1, 524287, 524289, 1, 458751, 524289, 1, 393215, 524289, 1, 327679, 524289, 1, 262143, 524289, 1, 196607, 524289, 1, 131071, 524289, 1, 65535, 524289, 1, 786433, 589825, 3, 720897, 655361, 0, 786432, 589825, 3, 720896, 393217, 1, 851967, 524289, 3, 786431, 524289, 1, 786450, 589825, 3, 720914, 655361, 0, 786449, 589825, 3, 720913, 655361, 0, 786448, 589825, 3, 720912, 655361, 0, 786447, 589825, 3, 720911, 655361, 0, 786446, 589825, 3, 720910, 655361, 0, 786445, 589825, 3, 720909, 655361, 0, 786444, 589825, 3, 720908, 655361, 0, 786443, 589825, 3, 720907, 655361, 0, 786442, 589825, 3, 720906, 655361, 0, 786441, 589825, 3, 720905, 655361, 0, 786440, 589825, 3, 720904, 655361, 0, 786439, 589825, 3, 720903, 655361, 0, 786438, 589825, 3, 720902, 655361, 0, 786437, 589825, 3, 720901, 655361, 0, 786436, 589825, 3, 720900, 655361, 0, 786435, 589825, 3, 720899, 655361, 0, 786434, 589825, 3, 720898, 655361, 0, 786452, 720897, 3, 720916, 720897, 2, 786451, 589825, 3, 720915, 327681, 1, 655380, 720897, 2, 589844, 720897, 2, 524308, 720897, 2, 458772, 720897, 2, 393236, 720897, 2, 327700, 720897, 2, 262164, 720897, 2, 196628, 720897, 2, 131092, 720897, 2, 65556, 720897, 2, 20, 720897, 2, 655379, 524289, 1, 589843, 524289, 1, 524307, 524289, 1, 458771, 524289, 1, 393235, 524289, 1, 327699, 524289, 1, 262163, 524289, 1, 196627, 524289, 1, 131091, 524289, 1, 65555, 524289, 1, 19, 327681, 2, -65516, 720897, 2, -65517, 589825, 2, 18, 589825, 3, -65518, 589825, 2, 17, 589825, 3, -65519, 589825, 2, 16, 589825, 3, -65520, 589825, 2, 15, 589825, 3, -65521, 589825, 2, 14, 589825, 3, -65522, 589825, 2, 13, 589825, 3, -65523, 589825, 2, 12, 589825, 3, -65524, 589825, 2, 11, 589825, 3, -65525, 589825, 2, 10, 589825, 3, -65526, 589825, 2, 9, 589825, 3, -65527, 589825, 2, 8, 589825, 3, -65528, 589825, 2, 7, 589825, 3, -65529, 589825, 2, 6, 589825, 3, -65530, 589825, 2, 5, 524289, 3, -65531, 524289, 1, -1, 524289, 1, -65536, 720897, 2, -131072, 720897, 2, -196608, 720897, 2, -262144, 720897, 2, -327680, 720897, 2, -393216, 720897, 2, -458752, 720897, 2, -524288, 720897, 2, -589824, 720897, 2, -655360, 720897, 2, -720896, 720897, 2, -786432, 720897, 0, -65537, 524289, 1, -131073, 524289, 1, -196609, 524289, 1, -262145, 524289, 1, -327681, 524289, 1, -393217, 524289, 1, -458753, 524289, 1, -524289, 524289, 1, -589825, 524289, 1, -655361, 524289, 1, -720897, 524289, 0, -131066, 589825, 2, -196602, 589825, 2, -262138, 589825, 2, -327674, 589825, 2, -393210, 589825, 2, -458746, 589825, 2, -524282, 589825, 2, -589818, 589825, 2, -655354, 589825, 2, -720890, 589825, 2, -786426, 655361, 0, -131067, 524289, 1, -196603, 524289, 1, -262139, 524289, 1, -327675, 524289, 1, -393211, 524289, 1, -458747, 524289, 1, -524283, 524289, 1, -589819, 524289, 1, -655355, 524289, 1, -720891, 524289, 1, -786427, 524289, 0, -131053, 589825, 2, -196589, 589825, 2, -262125, 589825, 2, -327661, 589825, 2, -393197, 589825, 2, -458733, 589825, 2, -524269, 589825, 2, -589805, 589825, 2, -655341, 589825, 2, -720877, 589825, 2, -786413, 655361, 0, -131054, 589825, 2, -196590, 589825, 2, -262126, 589825, 2, -327662, 589825, 2, -393198, 589825, 2, -458734, 589825, 2, -524270, 589825, 2, -589806, 589825, 2, -655342, 589825, 2, -720878, 589825, 2, -786414, 655361, 0, -131055, 589825, 2, -196591, 589825, 2, -262127, 589825, 2, -327663, 589825, 2, -393199, 589825, 2, -458735, 589825, 2, -524271, 589825, 2, -589807, 589825, 2, -655343, 589825, 2, -720879, 589825, 2, -786415, 655361, 0, -131056, 589825, 2, -196592, 589825, 2, -262128, 589825, 2, -327664, 589825, 2, -393200, 589825, 2, -458736, 589825, 2, -524272, 589825, 2, -589808, 589825, 2, -655344, 589825, 2, -720880, 589825, 2, -786416, 655361, 0, -131057, 589825, 2, -196593, 589825, 2, -262129, 589825, 2, -327665, 589825, 2, -393201, 589825, 2, -458737, 589825, 2, -524273, 589825, 2, -589809, 589825, 2, -655345, 589825, 2, -720881, 589825, 2, -786417, 655361, 0, -131058, 589825, 2, -196594, 589825, 2, -262130, 589825, 2, -327666, 589825, 2, -393202, 589825, 2, -458738, 589825, 2, -524274, 589825, 2, -589810, 589825, 2, -655346, 589825, 2, -720882, 589825, 2, -786418, 655361, 0, -131059, 589825, 2, -196595, 589825, 2, -262131, 589825, 2, -327667, 589825, 2, -393203, 589825, 2, -458739, 589825, 2, -524275, 589825, 2, -589811, 589825, 2, -655347, 589825, 2, -720883, 589825, 2, -786419, 655361, 0, -131060, 589825, 2, -196596, 589825, 2, -262132, 589825, 2, -327668, 589825, 2, -393204, 589825, 2, -458740, 589825, 2, -524276, 589825, 2, -589812, 589825, 2, -655348, 589825, 2, -720884, 589825, 2, -786420, 655361, 0, -131061, 589825, 2, -196597, 589825, 2, -262133, 589825, 2, -327669, 589825, 2, -393205, 589825, 2, -458741, 589825, 2, -524277, 589825, 2, -589813, 589825, 2, -655349, 589825, 2, -720885, 589825, 2, -786421, 655361, 0, -131062, 589825, 2, -196598, 589825, 2, -262134, 589825, 2, -327670, 589825, 2, -393206, 589825, 2, -458742, 589825, 2, -524278, 589825, 2, -589814, 589825, 2, -655350, 589825, 2, -720886, 589825, 2, -786422, 655361, 0, -131063, 589825, 2, -196599, 589825, 2, -262135, 589825, 2, -327671, 589825, 2, -393207, 589825, 2, -458743, 589825, 2, -524279, 589825, 2, -589815, 589825, 2, -655351, 589825, 2, -720887, 589825, 2, -786423, 655361, 0, -131064, 589825, 2, -196600, 589825, 2, -262136, 589825, 2, -327672, 589825, 2, -393208, 589825, 2, -458744, 589825, 2, -524280, 589825, 2, -589816, 589825, 2, -655352, 589825, 2, -720888, 589825, 2, -786424, 655361, 0, -131065, 589825, 2, -196601, 589825, 2, -262137, 589825, 2, -327673, 589825, 2, -393209, 589825, 2, -458745, 589825, 2, -524281, 589825, 2, -589817, 589825, 2, -655353, 589825, 2, -720889, 589825, 2, -786425, 655361, 0, -131052, 720897, 2, -196588, 720897, 2, -262124, 720897, 2, -327660, 720897, 2, -393196, 720897, 2, -458732, 720897, 2, -524268, 720897, 2, -589804, 720897, 2, -655340, 720897, 2, -720876, 720897, 2, -786412, 720897, 0)

[node name="Effects" type="Node2D" parent="map"]

[node name="door" type="Node2D" parent="."]
position = Vector2(560, 312)
script = ExtResource("12_rejb0")
teleport_value = "entry"
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="door"]
texture = ExtResource("11_2helu")

[node name="Area2D" type="Area2D" parent="door"]
script = ExtResource("14_pr5bk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="door/Area2D"]
shape = SubResource("RectangleShape2D_oknrl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(104, -280)
limit_left = 5
limit_top = -365
limit_right = 640
limit_bottom = 390
limit_smoothed = true
position_smoothing_speed = 20.0
editor_draw_limits = true

[connection signal="body_entered" from="door/Area2D" to="door/Area2D" method="_on_body_entered"]
